@@ -1,5 +1,11 @@
 2009-04-20  Martin Leidig  <mleidig@schlund.de>
 
+	Fixed problem in TargetGenerator occurring when modtime-check is
+	disabled, but targets aren't pre-built (URI problem when trying to
+	load module resources from file system).
+
+2009-04-20  Martin Leidig  <mleidig@schlund.de>
+
 	Fixed submit action bug (ignore unknown actions for next page selected
 	by pageflow mechanism).
 
